--- a/src/index.css
+++ b/src/index.css
@@ -4650,7 +4650,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #222;
+  background-color: #6495ed;
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
