--- a/src/index.css
+++ b/src/index.css
@@ -1671,6 +1671,7 @@ pre code {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
+  margin-bottom: 1em;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
@@ -2606,7 +2607,6 @@ output {
   height: 34px;
   padding: 6px 12px;
   font-size: 14px;
-  text-align: center;
   margin: 0 auto;
   line-height: 1.42857143;
   color: #555;
@@ -4237,17 +4237,20 @@ p.message-body{
   position: relative;
   text-align: center;
   margin: auto 0 auto 0;
-  border: 1px solid black;
+  padding: .75em;
   display:block;
+  background-color: #d9edf7;
 }
 @media (min-width: 768px) {
   .navbar {
     border-radius: 4px;
+    background-color: #d9edf7;
   }
 }
 @media (min-width: 768px) {
   .navbar-header {
     float: left;
+    background-color: #d9edf7;
   }
 }
 .navbar-collapse {
@@ -4660,8 +4663,8 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   color: #ccc;
 }
 .navbar-inverse {
-  background-color: #6495ed;
-  border-color: #080808;
+
+  
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
