--- a/src/index.css
+++ b/src/index.css
@@ -1634,6 +1634,10 @@ pre code {
   margin-right: auto;
   margin-left: auto;
 }
+.signup-form1{
+  width: 60%;
+  margin: 0 auto;
+}
 .friends-container{
   border-style: solid;
   border-color: black;
@@ -2563,8 +2567,9 @@ legend {
 label {
   display: inline-block;
   max-width: 100%;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   font-weight: bold;
+  text-align: center;
 }
 input[type="search"] {
   -webkit-box-sizing: border-box;
