--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,12 @@ template {
   display: none;
 }
 
+.selected-style {
+  font-weight: bold;
+  background-color: #d9edf7;
+}
+
+
 div.conversations {
   display: block;
   clear: all;
@@ -4684,7 +4690,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse {
 
-  
+
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
